--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <h3>58. param Element</h3>
 	
 	<object data="Video/Tea_Video.mp4">
-		<param name="autoplay" value="true">
+		<param name="control" value="true">
 	</object>
 
 <h3>59. pre Element</h3>
@@ -391,7 +391,7 @@
 		<source src="Video/Why Not Me.mp4" type="video/mp4">
 	</video>-->
 
-	<video controls autoplay width="50%">
+	<video controls width="50%">
 		<source src="Video/In the end.mp4" type="video/mp4">
 	</video>
 
